--- a/index.html
+++ b/index.html
@@ -19,135 +19,141 @@
   <body>
     <!--  header -->
     <header class="head-bg-img">
-      <div class="inner">
-        <!-- nav -->
-        <div class="nav">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- header nav ul li -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_w" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
-            </ul>
+      <div class="header_under_indx">
+        <div class="inner">
+          <!-- nav -->
+          <div class="nav">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- header nav ul li -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_w" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <main>
+    <div class="inner">
+    <!-- About Us カフェ紹介-->
+    <div id="aboutus">
+      <h2>About us</h2>
+      <p class="aap">私たちについて</p>
+      <div id="aboutus_a">
+        <div id="aboutus_img">
+          <img loading="lazy" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
+          <img loading="lazy" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
+        </div>
+        <div id="aboutus_b">
+          <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
+          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキ</p>
+        </div>
+      </div>
+    </div>
+    <!-- #about us -->
+
+    <!-- News -->
+    <div id="news">
+      <div class="tandb">
+        <h2>News</h2>
+        <div class="btn-4"><a href="#">READ MORE</a></div>
+      </div>
+      <div id="news_a">
+        <p><span>日付</span>ここにニュースが入ります</p>
+        <p><span>日付</span>ここにニュースが入ります</p>
+        <p><span>日付</span>ここにニュースが入ります</p>
+        <p><span>日付</span>ここにニュースが入ります</p>
+      </div>
+    </div>
+
+    <!-- Photo -->
+    <div id="photo">
+      <h2>Photo</h2>
+        <p class="sub_t photo_bp">旬なものを、旬なときに。</p>
+        <div id="photo_b">
+          <img loading="lazy" src="img/kari/carry1.jpg" alt="">
+          <img loading="lazy" src="img/kari/toast.jpg" alt="">
+          <img loading="lazy" src="img/kari/pasta2.jpg" alt="">
+          <img loading="lazy" src="img/kari/cake2.jpg" alt="">
+          <img loading="lazy" src="img/kari/coffee.jpg" alt="">
+          <img loading="lazy" src="img/kari/maccha.jpg" alt="">
+        </div>
+        <div class="btn-4"><a href="#">VIEW MORE</a></div>
+      </div>
+    </div>
+  </div>
+    <!-- Onlin shop -->
+    <div id="online_s">
+      <div class="inner i-pp">
+        <h2>ONLINE SHOP</h2>
+        <p class="sub_t">特別な人へ、特別な日に。</p>
+          <div id="onl_p">
+            <img loading="lazy" src="img/kari/cookie.jpg" alt="クッキー">
+            <div id="onl_pp">
+              <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
+              <div class="btn-3"><a href="#">詳細をみる</a></div>
+            </div>
+          </div>
+        </div>
+        <!-- /.inner -->
+      </div>
+      <!-- access -->
       <div class="inner">
-        <!-- About Us カフェ紹介-->
-        <div id="aboutus">
-          <h2>About us</h2>
-          <p class="aap">私たちについて</p>
-          <div id="aboutus_a">
-            <div id="aboutus_img">
-              <img loading="lazy" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
-              <img loading="lazy" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
-            </div>
-            <div id="aboutus_b">
-              <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
-              <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキ</p>
-            </div>
+        <div id="access">
+          <div id="acc_a">
+            <h2>ACCESS</h2>
+            <p class="sub_t">ぜひ、遊びにいらしてください。</p>
+            <p id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
+            <p id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
+            ＊ 営業に関する詳しい情報は、<a class="hov_03" id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
+            <p id="a_p3">STORE INFO</p>
+            <ul>
+              <li><span>・</span>熊本市東区御領8丁目10−53</li>
+              <li><span>・</span>11:00 - 18:00 (L.O 17:00)<br>
+              ※材料がなくなり次第、早めのCloseとさせていただくことがあります。</li>
+              <li><span>・</span>水曜定休日</li>
+              <li><span>・</span><a  class="hov_03"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
+            </ul>
           </div>
-        </div>
-        <!-- #about us -->
-
-        <!-- News -->
-        <div id="news">
-          <div class="tandb">
-            <h2>News</h2>
-            <div class="btn-4"><a href="#">READ MORE</a></div>
-          </div>
-          <div id="news_a">
-            <p><span>日付</span>ここにニュースが入ります</p>
-            <p><span>日付</span>ここにニュースが入ります</p>
-            <p><span>日付</span>ここにニュースが入ります</p>
-            <p><span>日付</span>ここにニュースが入ります</p>
-          </div>
-        </div>
-
-        <!-- Photo -->
-        <div id="photo">
-          <h2>Photo</h2>
-            <p class="sub_t photo_bp">旬なものを、旬なときに。</p>
-            <div id="photo_b">
-              <img loading="lazy" src="img/kari/carry1.jpg" alt="">
-              <img loading="lazy" src="img/kari/toast.jpg" alt="">
-              <img loading="lazy" src="img/kari/pasta2.jpg" alt="">
-              <img loading="lazy" src="img/kari/cake2.jpg" alt="">
-              <img loading="lazy" src="img/kari/coffee.jpg" alt="">
-              <img loading="lazy" src="img/kari/maccha.jpg" alt="">
-            </div>
-            <div class="btn-4"><a href="#">VIEW MORE</a></div>
+          <img loading="lazy" src="img/kari/cake3.jpg" alt="">
+          <div class="map_a d-f jc-c">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="800" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
       </div>
-        <!-- Onlin shop -->
-        <div id="online_s">
-          <div class="inner">
-            <h2>ONLINE SHOP</h2>
-            <p class="sub_t">特別な人へ、特別な日に。</p>
-              <div id="onl_p">
-                <img loading="lazy" src="img/kari/cookie.jpg" alt="クッキー">
-                <div id="onl_pp">
-                  <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
-                  <div class="btn-3"><a href="#">詳細をみる</a></div>
-                </div>
-              </div>
+        <!-- footer -->
+      <div class="main_contact">
+        <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+        <p class="main_con_p">You and Me Café</p>
+        <div class="main_cons d-f jc-c">
+          <div class="main_con_i_1"></div>
+          <div class="main_con_i_2"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="btn-5">
+          <a href="#">
+            <div class="con_1">
+              <h3>Contact</h3>
+              <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
             </div>
-            <!-- /.inner -->
-          </div>
-          <!-- access -->
-          <div class="inner">
-            <div id="access">
-              <div id="acc_a">
-                <h2>ACCESS</h2>
-                <p class="sub_t">ぜひ、遊びにいらしてください。</p>
-                <p id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
-                <p id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
-                ＊ 営業に関する詳しい情報は、<a class="hov_03" id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
-                <p id="a_p3">STORE INFO</p>
-                <ul>
-                  <li><span>・</span>熊本市東区御領8丁目10−53</li>
-                  <li><span>・</span>11:00 - 18:00 (L.O 17:00)<br>
-                  ※材料がなくなり次第、早めのCloseとさせていただくことがあります。</li>
-                  <li><span>・</span>水曜定休日</li>
-                  <li><span>・</span><a  class="hov_03"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
-                </ul>
-              </div>
-              <img loading="lazy" src="img/kari/cake3.jpg" alt="">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="1080" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-          </div>
-            <!-- footer -->
-          <div class="main_contact">
-            <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-            <p class="main_con_p">You and Me Café</p>
-            <div class="main_con_i_1"></div>
-            <div class="main_con_i_2"></div>
-            <div class="clear"></div>
-            <div class="btn-5">
-              <a href="#">
-                <div class="con_1">
-                  <h3>Contact</h3>
-                  <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-                </div>
-              </a>
-            </div>
-            <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-            <div class="inner">
-              <div class="con_4"></div>
-            </div>
-          </div>
-        </main>
-        <footer>
-          <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-        </footer>
-    </body>
+          </a>
+        </div>
+        <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+        <div class="inner">
+          <div class="con_4"></div>
+        </div>
+      </div>
+    <!-- </main> -->
+    <footer>
+      <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+    </footer>
+  </body>
 </html>
