--- a/shop.html
+++ b/shop.html
@@ -19,25 +19,27 @@
   <body>
     <!-- header -->
     <header class="head-bg-img-shop">
-      <div class="inner">
-        <!-- nav -->
-        <div class="nav">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- nav ul li -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_w" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
-            </ul>
+      <div class="header_under_indx">
+        <div class="inner">
+          <!-- nav -->
+          <div class="nav">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- header nav ul li -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_w" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <div class="inner d-f fd-c ai-c" id="shop_inner">
       <h2>Online Shop</h2>
@@ -47,41 +49,54 @@
         <!-- ↓CHEESECAKE -->
         <div class="sp-item">
           <p class="shop-ti bdr-1">CHEESECAKE Line Up</p>
-          <div class="sp-item-d d-f js-sb">
-            <a href="#">
-              <div class="sp-item-dd d-f fd-c ai-c">
-                <div class="img-hov-1 siz">
+
+          <div class="sp-item-d d-f jc-sb">
+
+            <article class="gallery">
+              <a class="hov d-b" href="#">
+                <figure>
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
+                </figure>
+                <div class="txt ta-c">
+                  <div class="pp">CHEESECAKE -PLANE-</div>
+                  <p class="sp-item-ti-2">U-cafe</p>
                 </div>
-                <p class="sp-item-ti">CHEESECAKE -PLANE-</p>
-                <p class="sp-item-ti-2">U-cafe</p>
-              </div>
-            </a>
-            <a href="#">
-              <div class="sp-item-dd d-f fd-c ai-c">
-                <div class="img-hov-1  siz">
-                  <img loading="lazy" src="img/kari/cake1.jpg" alt="抹茶チーズケーキ">
+              </a>
+            </article>
+
+            <article class="gallery">
+              <a class="hov d-b" href="#">
+                <figure>
+                  <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
+                </figure>
+                <div class="txt ta-c">
+                  <div class="pp">CHEESECAKE -MACCHA-</div>
+                  <p class="sp-item-ti-2">U-cafe</p>
                 </div>
-                <p class="sp-item-ti">CHEESECAKE -MACCHA-</p>
-                <p class="sp-item-ti-2">U-cafe</p>
-              </div>
-            </a>
+              </a>
+            </article>
+
           </div>
+
         </div>
         <!-- Cookie -->
         <div class="sp-item">
           <p class="shop-ti bdr-2">COOKIE - Special Days -</p>
-          <div class="sp-item-d d-f js-sb">
-            <a href="#">
-              <div class="sp-item-dd d-f fd-c ai-c">
-                <div class="img-hov-1 siz">
-                  <img loading="lazy" src="img/kari/cookie1.jpg" alt="クッキー">
+
+          <div class="sp-item-d d-f jc-sb"">
+            <article class="gallery">
+              <a class="hov d-b" href="#">
+                <figure>
+                  <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
+                </figure>
+                <div class="txt ta-c">
+                  <div class="pp">EVENT COOKIE</div>
+                  <p class="sp-item-ti-2">U-cafe</p>
                 </div>
-                <p class="sp-item-ti">EVENT COOKIE</p>
-                <p class="sp-item-ti-2">U-cafe</p>
-              </div>
-            </a>
+              </a>
+            </article>
           </div>
+
         </div>
       </div>
       <!-- shop-items -->
@@ -89,25 +104,28 @@
     <!-- /.inner -->
 
         <!-- footer -->
-    <div class="main_contact">
-      <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-      <p class="main_con_p">You and Me Café</p>
-      <div class="main_con_i_1"></div>
-      <div class="main_con_i_2"></div>
-      <div class="clear"></div>
-      <div class="btn-5">
-        <a href="#">
-          <div class="con_1">
-            <h3>Contact</h3>
-            <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-          </div>
-        </a>
+      <div class="main_contact">
+        <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+        <p class="main_con_p">You and Me Café</p>
+        <div class="main_cons d-f jc-c">
+          <div class="main_con_i_1"></div>
+          <div class="main_con_i_2"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="btn-5">
+          <a href="#">
+            <div class="con_1">
+              <h3>Contact</h3>
+              <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+            </div>
+          </a>
+        </div>
+        <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+        <div class="inner">
+          <div class="con_4"></div>
+        </div>
       </div>
-      <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-      <div class="inner">
-        <div class="con_4"></div>
-      </div>
-    </div>
+    <!-- </main> -->
     <footer>
       <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
     </footer>
