--- a/sp_cart.html
+++ b/sp_cart.html
@@ -19,29 +19,31 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="inner">
-        <!-- ヘッダーナビ -->
-        <div class="nav nav-border">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- ヘッダーナビ 項目部分 -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_b" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
-            </ul>
+      <div class="header_under">
+        <div class="inner">
+          <!-- ヘッダーナビ -->
+          <div class="nav nav-border">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- ヘッダーナビ 項目部分 -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_b" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <main>
       <div class="shop-ti-big d-f ai-c jc-c bl">
-        <p class="shop-ti-big-p">MY SHOPPING CART  /  U-cafe</p>
+        <p class="shop-ti-big-p">SHOPPING CART  /  U-cafe</p>
       </div>
       <div class="inner">
         <div class="cart_a">
