--- a/photo.html
+++ b/photo.html
@@ -18,26 +18,28 @@
   </head>
   <body>
     <!-- headerー -->
-    <header class="header-photo">
-      <div class="inner">
-        <!-- ヘッダーナビ -->
-        <div class="nav nav-border">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- ヘッダーナビ 項目部分 -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_b" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
-            </ul>
+    <header>
+      <div class="header_under_index header_under_index-bk">
+        <div class="inner">
+          <!-- nav -->
+          <div class="nav">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- ヘッダーナビ 項目部分 -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_b" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <main>
       <div class="inner cen">
@@ -50,14 +52,15 @@
       </div>
       <!-- /.inner -->
 
-      <!-- footer -->
+        <!-- footer -->
         <div class="main_contact">
           <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
           <p class="main_con_p">You and Me Café</p>
-          <div class="main_con_i_1"></div>
-          <div class="main_con_i_2"></div>
+          <div class="main_cons d-f jc-c">
+            <div class="main_con_i_1"></div>
+            <div class="main_con_i_2"></div>
+          </div>
           <div class="clear"></div>
-
           <div class="btn-5">
             <a href="#">
               <div class="con_1">
@@ -75,6 +78,5 @@
       <footer>
         <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
       </footer>
-    </main>
-  </body>
-</html>
+    </body>
+  </html>
