ショッピングカート完成
よし！見えてきた！

--- a/sp_ch-maccha.html
+++ b/sp_ch-maccha.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>チーズケーキ -抹茶- | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
+  <title>-抹茶-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -19,25 +19,27 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="inner">
-        <!-- ヘッダーナビ -->
-        <div class="nav nav-border">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- ヘッダーナビ 項目部分 -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_b" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
-            </ul>
+      <div class="header_under">
+        <div class="inner">
+          <!-- ヘッダーナビ -->
+          <div class="nav nav-border">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- ヘッダーナビ 項目部分 -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_b" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <main>
       <div class="shop-ti-big d-f ai-c jc-c">
@@ -57,8 +59,8 @@
           </div>
           <!-- /.sp-dt-sub1 -->
           <div class="sp-dt-sub2 d">
-            <p class="sp-dt-name ta-c">CHEESECAKE -MACCHA-</p>
-            <p class="sp-dt-name2 ta-c">チーズケーキ -抹茶-</p>
+            <p class="sp-dt-name ta-c">CHEESECAKE -PLANE-</p>
+            <p class="sp-dt-name2 ta-c">チーズケーキ -PLANE-</p>
           <div class="dt-price">1500円（税込み）</div>
           <div class="dt-size">
             <div class="dt-size-ti"><p>SIZE</p></div>
@@ -88,32 +90,31 @@
       </div>
     </div>
     <!-- /.inner -->
-                <!-- footer -->
-                <div class="main_contact">
-                  <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-                  <p class="main_con_p">You and Me Café</p>
-                  <div class="main_con_i_1"></div>
-                  <div class="main_con_i_2"></div>
-                  <div class="clear"></div>
-                  <div class="btn-5">
-                    <a href="#">
-                      <div class="con_1">
-                        <h3>Contact</h3>
-                        <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-                      </div>
-                    </a>
-                  </div>
-                  <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-                  <div class="inner">
-                    <div class="con_4"></div>
-                  </div>
-                </div>
-              </main>
-              <footer>
-                <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-              </footer>
-          </body>
-      </html>
-    </main>
-  </body>
-</html>
+        <!-- footer -->
+        <div class="main_contact">
+          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p">You and Me Café</p>
+          <div class="main_cons d-f jc-c">
+            <div class="main_con_i_1"></div>
+            <div class="main_con_i_2"></div>
+          </div>
+          <div class="clear"></div>
+          <div class="btn-5">
+            <a href="#">
+              <div class="con_1">
+                <h3>Contact</h3>
+                <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+              </div>
+            </a>
+          </div>
+          <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <div class="inner">
+            <div class="con_4"></div>
+          </div>
+        </div>
+      <!-- </main> -->
+      <footer>
+        <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+      </footer>
+    </body>
+  </html>
