--- a/sp_cart.html
+++ b/sp_cart.html
@@ -68,12 +68,27 @@
             </div>
           </div>
           <!-- /.cart_item -->
-          <div class="cart_atr">
-            <p class="cart_f">＊ご要望 / ご贈答用にお熨斗をご希望のかたはこちらへご記入ください。</p>
-            <div class="cart_g"></div>
-            <div class="cart_h">
-              <div class="cart_7"><p>お支払い金額<br>（お引渡し時）</p></div>
-              <div class="cart_8"></div>
+          <div class="cart_atr d-f js-sb">
+
+            <div class="cart_k">
+              <p class="cart_f">＊ご要望 / ご贈答用にお熨斗をご希望のかたはこちらへご記入ください。</p>
+              <div class="cart_g"></div>
+            </div>
+
+            <div class="cart_j d-f fd-c ai-c">
+              <div class="cart_h d-f ai-fe js-sb">
+                <div class="cart_7"><p>お支払い金額<br>（お引渡し時）</p></div>
+                <div class="cart_8">2,000円</div>
+              </div>
+              <div class="cart_i">
+                <div class="btn-6 ww">
+                  <a href="#">ご購入</a>
+              </div>
+              <div class="btn-7 ww">
+                <a href="#">買い物を続ける</a>
+              </div>
+            </div>
+
             </div>
           </div>
           <!-- /.cart_atr -->
@@ -82,5 +97,30 @@
       </div>
       <!-- /.inner -->
     </main>
-  </body>
+    <div class="main_contact">
+      <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+      <p class="main_con_p">You and Me Café</p>
+      <div class="main_cons d-f jc-c">
+        <div class="main_con_i_1"></div>
+        <div class="main_con_i_2"></div>
+      </div>
+      <div class="clear"></div>
+      <div class="btn-5">
+        <a href="#">
+          <div class="con_1">
+            <h3>Contact</h3>
+            <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+          </div>
+        </a>
+      </div>
+      <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+      <div class="inner">
+        <div class="con_4"></div>
+      </div>
+    </div>
+  <!-- </main> -->
+  <footer>
+    <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+  </footer>
+</body>
 </html>
