--- a/sp_cookie.html
+++ b/sp_cookie.html
@@ -19,25 +19,27 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="inner">
-        <!-- ヘッダーナビ -->
-        <div class="nav nav-border">
-          <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-          <!-- ヘッダーナビ 項目部分 -->
-          <div class="nav_li">
-            <ul>
-              <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
-              <li><a class="hov_nav_b" href="/news">NEWS</a></li>
-              <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
-              <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
-              <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
-              <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
-              <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
-            </ul>
+      <div class="header_under">
+        <div class="inner">
+          <!-- ヘッダーナビ -->
+          <div class="nav nav-border">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- ヘッダーナビ 項目部分 -->
+            <div class="nav_li">
+              <ul>
+                <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
+                <li><a class="hov_nav_b" href="/news">NEWS</a></li>
+                <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
+                <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
+                <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
+              </ul>
+            </div>
           </div>
         </div>
+        <!-- .inner div -->
       </div>
-      <!-- .inner div -->
     </header>
     <main>
       <div class="shop-ti-big d-f ai-c jc-c">
@@ -45,6 +47,7 @@
       </div>
       <div class="inner">
         <div class="sp-dt-main d-f js-sb">
+
           <div class="sp-dt-sub1 d-f">
             <div class="sp-dt-sub-d1 d-f fd-c">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
@@ -56,6 +59,7 @@
             </div>
           </div>
           <!-- /.sp-dt-sub1 -->
+          
           <div class="sp-dt-sub2 d">
             <p class="sp-dt-name ta-c">COOKIE -SPECIAL DAYS-</p>
             <p class="sp-dt-name2 ta-c">クッキー -ギフト仕様-</p>
@@ -84,32 +88,31 @@
       </div>
     </div>
     <!-- /.inner -->
-                <!-- footer -->
-                <div class="main_contact">
-                  <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-                  <p class="main_con_p">You and Me Café</p>
-                  <div class="main_con_i_1"></div>
-                  <div class="main_con_i_2"></div>
-                  <div class="clear"></div>
-                  <div class="btn-5">
-                    <a href="#">
-                      <div class="con_1">
-                        <h3>Contact</h3>
-                        <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-                      </div>
-                    </a>
-                  </div>
-                  <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-                  <div class="inner">
-                    <div class="con_4"></div>
-                  </div>
-                </div>
-              </main>
-              <footer>
-                <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-              </footer>
-          </body>
-      </html>
-    </main>
-  </body>
-</html>
+        <!-- footer -->
+        <div class="main_contact">
+          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p">You and Me Café</p>
+          <div class="main_cons d-f jc-c">
+            <div class="main_con_i_1"></div>
+            <div class="main_con_i_2"></div>
+          </div>
+          <div class="clear"></div>
+          <div class="btn-5">
+            <a href="#">
+              <div class="con_1">
+                <h3>Contact</h3>
+                <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+              </div>
+            </a>
+          </div>
+          <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <div class="inner">
+            <div class="con_4"></div>
+          </div>
+        </div>
+      <!-- </main> -->
+      <footer>
+        <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+      </footer>
+    </body>
+  </html>
