htmlの細やかな修正
おk

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       <div class="inner">
           <div class="con-cen ta-c">
             <h2>Contact</h2>
-            <p class="sub_t">お問い合わせ</p>
+            <p class="sub_t mb_60">お問い合わせ</p>
           </div>
           <div class="ta-l">
             <p>お気軽にお問い合わせください。<br>以下のフォームに必要事項をご入力いただき、送信ボタンを押してください。<br>（<span class="c-red">＊</span>マークは必須項目です。）</p>
@@ -98,7 +98,7 @@
                   </tbody>
                 </table>
               </div>
-              <div>
+              <div class="btn-8">
                 <button type="submit" class="hov mfp_element_submit mfp_element_all">入力確認画面へ進む</button>
               </div>
             </form>
