--- a/photo.html
+++ b/photo.html
@@ -19,7 +19,7 @@
   <body>
     <!-- headerー -->
     <header>
-      <div class="header_under_index header_under_index-bk">
+      <div class="header_under_index header_under_index-bk mb_50">
         <div class="inner">
           <!-- nav -->
           <div class="nav">
