--- a/sp_cart.html
+++ b/sp_cart.html
@@ -19,7 +19,7 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="header_under">
+      <div class="header_under mb_50">
         <div class="inner">
           <!-- ヘッダーナビ -->
           <div class="nav nav-border">
