--- a/sp_ch-maccha.html
+++ b/sp_ch-maccha.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>-抹茶-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
+  <title>抹茶-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -19,7 +19,7 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="header_under">
+      <div class="header_under mb_50">
         <div class="inner">
           <!-- ヘッダーナビ -->
           <div class="nav nav-border">
@@ -48,7 +48,7 @@
       <div class="inner">
         <div class="sp-dt-main d-f js-sb">
           <div class="sp-dt-sub1 d-f">
-            <div class="sp-dt-sub-d1 d-f fd-c">
+            <div class="sp-dt-sub-d1 d-f fd-c js-sb">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
@@ -58,37 +58,37 @@
             </div>
           </div>
           <!-- /.sp-dt-sub1 -->
-          <div class="sp-dt-sub2 d">
-            <p class="sp-dt-name ta-c">CHEESECAKE -PLANE-</p>
-            <p class="sp-dt-name2 ta-c">チーズケーキ -PLANE-</p>
-          <div class="dt-price">1500円（税込み）</div>
-          <div class="dt-size">
-            <div class="dt-size-ti"><p>SIZE</p></div>
-            <div class="dt-size-po"><p>\ 一番人気 /</p></div>
-          </div>
-          <div class="dt-size-dt d-f">
-            <div class="dt-size">
-              <p>12cm</p>
+          <div class="sp-dt-sub2 d ta-l">
+            <p class="sp-dt-name ta-c">CHEESECAKE -MACCHA-</p>
+            <p class="sp-dt-name2 ta-c">チーズケーキ -抹茶-</p>
+            <div class="dt-price">1500円（税込み）</div>
+            <div class="dt-size d-f">
+              <div class="dt-size-ti"><p>SIZE</p></div>
+              <div class="dt-size-po"><p>\ 一番人気 /</p></div>
             </div>
-            <div class="dt-size">
-              <p>15cm</p>
+            <div class="dt-size-dt d-f">
+              <div class="dt-size">
+                <p>12cm</p>
+              </div>
+              <div class="dt-size">
+                <p>15cm</p>
+              </div>
+              <div class="dt-size">
+                <p>18cm</p>
+              </div>
             </div>
-            <div class="dt-size">
-              <p>18cm</p>
+            <div class="dt-text"><p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p></div>
             </div>
-          </div>
-          <div class="dt-text"><p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p></div>
-        </div>
         <!-- /.sp-dt-sub2 -->
-      </div>
+          </div>
       <!-- /.sp-dt-maim -->
-      <div class="btn-6">
-        <a href="">購入する</a>
-      </div>
-      <div class="btn-7">
-        <a href="">戻る</a>
-      </div>
-    </div>
+          <div class="btn-6">
+            <a href="">購入する</a>
+          </div>
+          <div class="btn-7">
+            <a href="">戻る</a>
+          </div>
+        </div>
     <!-- /.inner -->
         <!-- footer -->
         <div class="main_contact">
