--- a/sp_cookie.html
+++ b/sp_cookie.html
@@ -19,7 +19,7 @@
   <body>
     <!-- headerー -->
     <header class="header-photo">
-      <div class="header_under">
+      <div class="header_under mb_50">
         <div class="inner">
           <!-- ヘッダーナビ -->
           <div class="nav nav-border">
@@ -47,9 +47,8 @@
       </div>
       <div class="inner">
         <div class="sp-dt-main d-f js-sb">
-
           <div class="sp-dt-sub1 d-f">
-            <div class="sp-dt-sub-d1 d-f fd-c">
+            <div class="sp-dt-sub-d1 d-f fd-c js-sb">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
@@ -59,8 +58,8 @@
             </div>
           </div>
           <!-- /.sp-dt-sub1 -->
-          
-          <div class="sp-dt-sub2 d">
+
+          <div class="sp-dt-sub2 d ta-l">
             <p class="sp-dt-name ta-c">COOKIE -SPECIAL DAYS-</p>
             <p class="sp-dt-name2 ta-c">クッキー -ギフト仕様-</p>
           <div class="dt-price">1500円（税込み）</div>
