--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="inner">
     <!-- About Us カフェ紹介-->
     <div id="aboutus">
-      <h2>About us</h2>
-      <p class="aap">私たちについて</p>
+      <h2 class="ta-l">About us</h2>
+      <p class="aap ta-l">私たちについて</p>
       <div id="aboutus_a">
         <div id="aboutus_img">
           <img loading="lazy" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
@@ -66,10 +66,10 @@
         <h2>News</h2>
         <div class="btn-4"><a href="#">READ MORE</a></div>
       </div>
-      <div id="news_a">
-        <p><span>日付</span>ここにニュースが入ります</p>
-        <p><span>日付</span>ここにニュースが入ります</p>
-        <p><span>日付</span>ここにニュースが入ります</p>
+      <div id="news_a" class="ta-l">
+        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
+        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
+        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
         <p><span>日付</span>ここにニュースが入ります</p>
       </div>
     </div>
@@ -109,13 +109,13 @@
       <div class="inner">
         <div id="access">
           <div id="acc_a">
-            <h2>ACCESS</h2>
-            <p class="sub_t">ぜひ、遊びにいらしてください。</p>
-            <p id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
-            <p id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
+            <h2 class="ta-l">ACCESS</h2>
+            <p class="sub_t ta-l">ぜひ、遊びにいらしてください。</p>
+            <p class="ta-l" id="a_p1">山小屋をイメージした、木のぬくもりを感じられる空間を準備いたしました。真心をこめたお料理でおもてなしいたします。<br>皆さまのご来店を心よりお待ちしております。</p>
+            <p class="ta-l" id="a_p2">＊ 店主一人でこだわってお作りしております。<br>　 提供にはお時間をいただいております。<br>
             ＊ 営業に関する詳しい情報は、<a class="hov_03" id="a_pa" href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank">公式インスタグラム</a>をご確認ください。</p>
-            <p id="a_p3">STORE INFO</p>
-            <ul>
+            <p class="ta-l" id="a_p3">STORE INFO</p>
+            <ul class="ta-l">
               <li><span>・</span>熊本市東区御領8丁目10−53</li>
               <li><span>・</span>11:00 - 18:00 (L.O 17:00)<br>
               ※材料がなくなり次第、早めのCloseとさせていただくことがあります。</li>
